--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@
   <li>Commit 02</li>
   <li>Commit 03</li>
   <li>Commit 04: `git submodule update --remote`</li>
-  <li>Commit 05</li>
+  <li>
+    <strong>Commit 05</strong>
+    <ul>
+      <li>05a</li>
+    </ul>
+  </li>
 </ul>
